--- a/public/css/Component/Customer/Customer_Complains.css
+++ b/public/css/Component/Customer/Customer_Complains.css
@@ -1,10 +1,10 @@
 .Customer_Complains {
 
-    #dashboard i {
+    #complaints i {
         color: var(--green-color-one);
     }
 
-    #dashboard h3 {
+    #complaints h3 {
         color: var(--green-color-one);
     }
 
