--- a/public/css/Component/Collector/Collector_Reuqest_Assigned.css
+++ b/public/css/Component/Collector/Collector_Reuqest_Assigned.css
@@ -70,6 +70,10 @@
     justify-content: center;
   }
 
+  .cancel-open .fa-solid {
+    font-size: 21px !important;
+  }
+
   .complete_image {
     width: 27px;
     height: 27px;
@@ -103,21 +107,90 @@
     display: none;
   }
 
-
-  /*cancel confirm popup*/
-  .cancel-confirm {
-    /* display: none;
+  .on_the_way {
+    display: flex;
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%) scale(0);
-    background-color: rgba(0, 0, 0, 0.1);
-    z-index: 2;
-    transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+    z-index: 4;
     align-items: center;
-    justify-content: center; */
+    justify-content: center;
+    flex-direction: column;
+    overflow: hidden;
+    transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+    box-shadow: var(--box-shadow);
+    border-radius: 10px;
+    background-color: #333;
+  }
+
+  .on_the_way.active {
+    transform: translate(-50%, -50%) scale(1);
+    background-color: rgba(0, 0, 0, 0);
+  }
+
+  .on_the_way .content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 270px;
+    background: white;
+    padding: 30px;
+    flex-direction: column;
+  }
+
+  .on_the_way .content h2 {
+    font-size: 18px;
+    font-weight: 300;
+    margin-bottom: 12px;
+    font-weight: 600 !important;
+
+  }
+
+  .on_the_way .content h3 {
+    font-size: 15px;
+    font-weight: 300;
+    margin-bottom: 8px;
+  }
+
+  .on_the_way .content-left {
+    display: flex;
+    align-items: center;
+    width: 80%;
+    justify-content: space-around;
+  }
+
+  .on_the_way .content-top {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px !important;
+    font-weight: 600 !important;
+  }
+
+  .on_the_way .content-left .left {
+    background-color: var(--green-color-one) !important;
+  }
+
+  .on_the_way .content button {
+    width: 100px;
+    height: 27px;
+    font-size: 14px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    margin-top: 10px;
+    cursor: pointer;
+    color: white;
+    letter-spacing: 0.02rem;
+    background-color: #bab3b3;
+
+  }
+
+
+  .cancel-confirm {
     display: flex;
     position: fixed;
     top: 50%;
@@ -214,7 +287,6 @@
     color: white;
   }
 
-
   .cancel-reason-submit-button:hover {
     background: #c62323;
   }
@@ -255,8 +327,6 @@
     padding: 0;
     box-sizing: border-box;
   }
-
-
 
   .personal-details-popup-box {
     .personal-details-popup-form {
@@ -521,7 +591,6 @@
   }
 
 
-
   /* Styling for Popup Content */
   .popup-content {
     position: absolute;
@@ -613,18 +682,18 @@
   }
 
 
-.pop_up_confirm_collect_cont .buttons .complete-btn {
-  width: 200px;
-  height: 50px;
-  font-size: 19px;
-  background-color: #1B6652;
-  color: #ffffff; 
-  border: none;
-  border-radius: 5px;
-      cursor: pointer;
-      margin-right: 20px;
-      box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-}
+  .pop_up_confirm_collect_cont .buttons .complete-btn {
+    width: 200px;
+    height: 50px;
+    font-size: 19px;
+    background-color: #1B6652;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-right: 20px;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+  }
 
   .pop_up_confirm_collect_cont .buttons .complete-btn:hover {
 
@@ -632,24 +701,25 @@
   }
 
 
-.pop_up_confirm_collect_cont .buttons .cancel-btn {
-  width: 200px;
-  height: 50px;
-  font-size: 19px;
-  background-color: #b8b8b8; 
-  color: #ffffff; 
-  border: none; 
-  border-radius: 5px;
-  cursor: pointer;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-  margin-right: 0; /* Reset margin for the last button */
+  .pop_up_confirm_collect_cont .buttons .cancel-btn {
+    width: 200px;
+    height: 50px;
+    font-size: 19px;
+    background-color: #b8b8b8;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    margin-right: 0;
+    /* Reset margin for the last button */
 
-}
+  }
 
-.pop_up_confirm_collect_cont .buttons .cancel-btn:hover {
-  
-  background-color: #979494; 
-}
+  .pop_up_confirm_collect_cont .buttons .cancel-btn:hover {
+
+    background-color: #979494;
+  }
 
 
   /* ------------*/
