--- a/public/css/Component/Admin/Admin_Dashboard.css
+++ b/public/css/Component/Admin/Admin_Dashboard.css
@@ -318,13 +318,24 @@
         margin-right: 10px;
     }
 
+    .content_container{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .content_container h2{
+        margin-top: 5px;
+        font-size: 22px;
+        
+    }
+
     .main-right-bottom-two-cont i {
         font-size: 36px;
     }
 
     .main-right-bottom-two-cont h3 {
         width: 100px;
-        text-align: center;
+        /* text-align: center; */
     }
 
     .main-right-bottom-two-cont h4 {
