--- a/public/css/Component/Admin/Admin_Discount_Agent_View.css
+++ b/public/css/Component/Admin/Admin_Discount_Agent_View.css
@@ -17,13 +17,13 @@
     }
 
     .table-header {
-        grid-template-columns: 25% 25% 25% 25%;
+        grid-template-columns: 20% 20% 20% 20% 20%;
     }
 
     .table-row {
         height: 52px;
         display: grid;
-        grid-template-columns: 25% 25% 25% 25%;
+        grid-template-columns: 20% 20% 20% 20% 20%;
     }
 
     .table td {
