--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,6 +91,7 @@
 @import url('Component/Agent/Agent_Dashboard.css');
 @import url('Component/Agent/Agent_Sidebar.css');
 @import url('Component/Agent/Agent_Main.css');
+@import url('Component/Agent/Agent_Editprofile.css');
 
 
 /* Admin CSS */
