--- a/public/css/style.css
+++ b/public/css/style.css
@@ -134,6 +134,7 @@
 @import url('Component/Admin/Admin_Center_Main_Request_Incoming.css');
 @import url('Component/Admin/Admin_Center_Main_Request_Assigned.css');
 @import url('Component/Admin/Admin_Center_Main_Request_Cancelled.css');
+@import url('Component/Admin/Admin_Center_Main_Request_Completed.css');
 
 
 
