--- a/public/css/Component/Admin/Admin_Center_Main_Request_Completed.css
+++ b/public/css/Component/Admin/Admin_Center_Main_Request_Completed.css
@@ -41,13 +41,13 @@
     }
 
     .table-header {
-        grid-template-columns: 10% 13% 13% 12.5% 12.5% 14% 12.5% 12.5%;
+        grid-template-columns: 11% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 14%;
     }
 
     .table-row {
         height: 52px;
         display: grid;
-        grid-template-columns: 10% 13% 13% 12.5% 12.5% 14% 12.5% 12.5%;
+        grid-template-columns: 11% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 14%;
     }
 
     .table td {
@@ -219,8 +219,132 @@
         }
     }
 
-     /*request details*/
-     .request-details-pop {
+      /*collect details*/
+    .collect-details-pop {
+        display: flex;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        z-index: 4;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
+    }
+
+    .collect-details-pop.active {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .collect-details-pop-form {
+        box-sizing: border-box;
+        width: 100%;
+        background: var(--background-color-main);
+        border-radius: 10px !important;
+        top: 0;
+        position: relative;
+        text-align: center;
+        padding: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: transform 0.4s, top 0.4s;
+        flex-direction: column;
+        color: var(--main-text-color);
+    }
+
+    .collect-details-pop-form-top {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 25px;
+        font-size: 18px;
+    }
+
+    .collect-details-topic::before {
+        content: '';
+        position: absolute;
+        margin-top: 25px;
+        margin-left: 40px;
+        margin-bottom: 15px;
+        height: 3px;
+        width: 75px;
+        background: var(--green-color-one);
+    }
+
+    .collect-details-pop-form-close {
+        width: 25px;
+        height: 25px;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+    }
+
+    .collect-details-pop-form-content {
+        display: grid;
+        grid-template-columns: 70% 30%;
+        width: 80%;
+        background: var(--background-color-main);
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
+        padding: 10px 40px;
+        height: 300px;
+    }
+
+    .collect-details-pop-form-content span {
+        width: 250px;
+    }
+
+    .collect-details-pop-form-content-labels {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .collect-details-pop-form-content-labels h3 {
+        font-weight: 300;
+        font-size: 14px;
+        margin-bottom: 5%;
+        width: 300px;
+        text-align: left;
+        margin-left: 20%;
+        color: #7c7c7d;
+    }
+
+    .collect-details-pop-form-content-right-values {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: center;
+    }
+
+    /* .collect-details-pop-form-content-right-values-cont h3 {
+        
+    } */
+
+    .collect-details-pop-form-content-right-values-cont {
+        display: flex;
+        margin-bottom: 11%;
+        
+    }
+
+    .collect-details-pop-form-content-right-values h3 {
+        font-size: 14px;
+        color: #767e95;
+        font-weight: 550;
+        
+    }
+
+    /*Collector info*/
+    .personal-details-popup-box {
         display: flex;
         position: fixed;
         top: 50%;
@@ -237,107 +361,172 @@
         background-color: var(--main-text-color);
     }
 
-    .request-details-pop.active {
+    .personal-details-popup-box.active {
         transform: translate(-50%, -50%) scale(1);
-            
+        background-color: rgba(0, 0, 0, 0);
     }
 
-    .request-details-pop-form {
-        width: 550px;
-        background: white;
+    .personal-details-popup-form {
+        box-sizing: border-box;
+        width: 700px;
+        background: var(--background-color-main);
         border-radius: 6px;
         top: 0;
         position: relative;
         text-align: center;
-        padding: 20px;
-        color: var(--main-text-color);
+        padding: 0 30px 30px 30px;
         display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: transform 0.4s, top 0.4s;
         flex-direction: column;
-
-    }
-
-    .request-details-pop-form-top {
-        display: flex;
         align-items: center;
         justify-content: center;
-        margin-bottom: 25px;
-        font-size: 18px;
+        box-shadow: var(--box-shadow);
+        color: var(--main-text-color);
     }
 
-    .request-details-pop-form-close {
-        width: 25px;
-        height: 25px;
+    .personal-details-topic {
+        letter-spacing: 0.03rem;
+    }
+
+    .personal-details-topic::before {
+        content: '';
+        position: absolute;
+        margin-top: 25px;
+        margin-bottom: 25px;
+        height: 3px;
+        width: 70px;
+        margin-left: 25%;
+        background: var(--green-color-one);
+    }
+
+    .personal-details-popup-form-close {
+
         position: absolute;
         top: 10px;
         right: 10px;
         width: 20px;
-        height: 20px;
         cursor: pointer;
     }
 
-    .request-details-topic {
-        display: flex;
-    }
-
-    .request-details-pop-form-content {
+    .personal-details-popup {
         display: grid;
-        grid-template-columns: 30% 70%;
-        width: 95%;
-        background-color: white;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        border-radius: 6px;
-        margin-bottom: 10px;
-
+        grid-template-columns: 40% 60%;
+        width: 100%;
+        border-radius: 4px;
+        height: 100%;
+        padding-top: 10px;
+        margin-top: 17px;
+        box-shadow: var(--box-shadow);
     }
 
-    .request-details-topic::before {
-        content: '';
-        position: absolute;
-        margin-top: 23px;
-        margin-left: 45px;
-        margin-bottom: 15px;
-        height: 4px;
-        width: 67px;
-        background: #1B6652;
-
+    .personal-details-right {
+        display: grid;
+        grid-template-columns: 35% 65%;
     }
 
-    .request-details-right-labels {
+    .personal-details-right-labels {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
         padding-top: 40px;
-        padding-left: 40px;
         padding-bottom: 50px;
-       
+        padding-left: 25px;
     }
 
-    .request-details-right-labels span {
+    .personal-details-right-labels span {
         margin-bottom: 15px;
         font-size: 15px;
         color: #7c7c7d;
     }
 
-    .request-details-right-values {
+    .personal-details-right-values {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
         padding-top: 40px;
-        padding-left: 90px;
         padding-bottom: 50px;
-       
+        padding-left: 32px;
     }
 
-    .request-details-right-values span {
+    .personal-details-right-values span {
         margin-bottom: 15px;
         font-size: 15px;
         color: #767e95;
         font-weight: 550;
+    }
+
+    .personal-details-left {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+        flex-direction: column;
+    }
+
+    .personal-details-left img {
+        width: 150px;
+        height: 150px;
+    }
+
+    .personal-details-left p {
+        margin-top: 5px;
+        font-size: 15px;
+        color: #7c7c7d;
+    }
+
+    .personal-details-left span {
+        color: #767e95;
+        font-weight: 550;
+    }
+
+    .profile-pic {
+        width: 70%;
+        height: auto;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-bottom: 8px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    }
+
+    .personal-details-topic {
+        font-size: 18px;
+        font-weight: 500;
+        position: relative;
+        margin-inline-end: auto;
+        margin-top: 15px;
+    }
+
+    .confirm_button {
+        padding: 7px;
+        background-color: #f6e58d;
+        color: var(--main-text-color);
+        border-radius: 5px;
+        box-shadow: var(--box-shadow);
+        outline: none;
+        border: none;
+        cursor: not-allowed;
+
+    }
+
+    .confirm_button:hover {
+        background-color: #ddce7f;
+    }
+
+    .confirmed_button {
+        padding: 7px;
+        background-color: var(--green-color-one);
+        color: white;
+        border-radius: 5px;
+        box-shadow: var(--box-shadow);
+        outline: none;
+        border: none;
+        cursor: not-allowed;
+
+    }
+
+    .confirmed_button:hover {
+        background-color: #19954e;
     }
 
 
