discount agent view in customer dashbord without delete

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,6 +34,9 @@
 
 @import url('Component/Customer/Customer_Transfercredit.css');
 
+@import url('Component/Customer/Customer_Discount_Agent_View.css');
+@import url('Component/Customer/Customer_Discount_Agent.css');
+
 /* Colletor CSS */
 
 
