--- a/public/css/Component/Collector/Collector_Complains.css
+++ b/public/css/Component/Collector/Collector_Complains.css
@@ -1,9 +1,9 @@
 .Collector_Complains {
-    #dashboard i {
+    #complains i {
         color: var(--green-color-one);
     }
 
-    #dashboard h3 {
+    #complains h3 {
         color: var(--green-color-one);
     }
 
@@ -22,6 +22,7 @@
         box-shadow: var(--box-shadow2);
         width: 100%;
         box-sizing: border-box;
+        z-index: 1;
     }
 
     .main-right-top-search {
@@ -57,84 +58,12 @@
         outline: none;
     }
 
-
     .main-right-top-notification {
         display: flex;
         align-items: center;
         justify-content: center;
         margin-left: 50%;
         margin-right: -1%;
-    }
-
-    .dot {
-        width: 11px;
-        height: 11px;
-        border-radius: 50%;
-        background-color: #F13E3E;
-        margin-top: -14px;
-        margin-left: -12px;
-    }
-
-    .main-right-top-notification i {
-        font-size: 29px;
-        cursor: pointer;
-    }
-
-    .notification_popup {
-        height: 0;
-        position: absolute;
-        top: 9%;
-        right: 11%;
-        background-color: var(--background-color-main);
-        border-radius: 10px;
-        padding: 0;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        transition: height 0.6s ease-in;
-        width: 18%;
-        visibility: hidden;
-        opacity: 0;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        overflow: scroll;
-        border: 1px solid #dcdde1;
-    }
-
-    .notification_popup h1 {
-        font-size: 19px;
-        letter-spacing: 0.001rem;
-        margin-bottom: 13px;
-        margin-top: 5px;
-        margin-left: 8px;
-    }
-
-    .notification_popup.active {
-        height: 200px;
-        padding: 10px;
-        visibility: visible;
-        opacity: 1;
-    }
-
-    .notification {
-        height: 43px !important;
-        margin-top: 10px;
-        display: flex;
-        align-items: center;
-        padding-left: 10px;
-        font-size: 14px;
-        cursor: pointer;
-    }
-
-    .notification:hover {
-        background-color: var(--notification-hover);
-    }
-
-    .notification-green-dot {
-        width: 11px;
-        height: 11px;
-        border-radius: 50%;
-        background-color: var(--green-color-one);
-        margin-right: 10px;
     }
 
     .main-right-top-profile {
@@ -162,243 +91,296 @@
         font-size: 14px;
     }
 
+    .main-bottom {
+        display: grid;
+        grid-template-rows: 12% 88%;
+    }
+
+    .main-bottom-top {
+        display: flex;
+        flex-direction: column;
+        padding-left: 45px;
+    }
+
+    .main-bottom-top p {
+        font-size: 15px !important;
+        padding-bottom: 5px;
+        color: var(--main-text-color);
+        letter-spacing: 0.03rem;
+    }
+
+    .main-bottom-top h2 {
+        font-size: 18px !important;
+        padding-bottom: 5px;
+        color: var(--main-text-color);
+        letter-spacing: 0.03rem;
+        margin-top: 15px;
+    }
+
+    .main-bottom-top-cont {
+        display: flex;
+        margin-top: 8px;
+    }
+
+    .line2 {
+        width: 90px;
+        height: 3px;
+        background-color: var(--green-color-one);
+    }
+
+    .main-bottom-top-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-right: 13px;
+        cursor: pointer;
+    }
+
+    .line1 {
+        width: 90px;
+        height: 3px;
+    }
+
+    .main-bottom-down {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .main-bottom-component {
+        width: 50%;
+        height: 75%;
+        box-shadow: var(--box-shadow2);
+        border-radius: 10px;
+        padding: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .main-bottom-component-right {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .main-bottom-component-right img {
+        width: 100%;
+        height: 95%;
+        box-shadow: var(--box-shadow2);
+        border-radius: 10px;
+    }
+
+    .main-bottom-component-left {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .main-bottom-component-left-topic {
+        margin-bottom: 25px;
+    }
+
+    .line {
+        height: 4px;
+        width: 60px;
+        background-color: var(--green-color-one);
+        margin-top: 3px;
+    }
+
+    .main-bottom-component-left-topic h2 {
+        font-size: 21px;
+        font-weight: 500;
+        letter-spacing: 0.01rem;
+        margin-top: 10px;
+
+    }
+
+    .main-bottom-component-left-component {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main-bottom-component-left-component {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 6px;
+    }
+
+    .main-bottom-component-left-component h2 {
+        font-weight: 500;
+        margin-bottom: 5px;
+        font-size: 15px;
+        margin-bottom: 7px;
+    }
+
+    .main-bottom-component-left-component h4 {
+        font-weight: 500;
+        margin-bottom: 5px;
+        font-size: 20px;
+        margin-bottom: 7px;
+    }
+
+    .main-bottom-component-left-component input {
+        height: 29px;
+        width: 98%;
+        outline: none;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        padding-left: 15px;
+        font-size: 14px;
+        margin-bottom: 3px;
+        transition: all 0.3s ease;
+        background-color: var(--background-color-two);
+        color: var(--main-text-color);
+        transition: all 0.6s ease-in;
+    }
+
+    .main-bottom-component-left-component input:focus {
+        border-color: #4dccaa;
+    }
+
+    .complain {
+        height: 66px !important;
+    }
+
+    .err {
+        height: 10px;
+        font-size: 14px;
+        font-weight: 500;
+        margin-bottom: 5px;
+        color: #F13E3E;
+    }
+
+    .main-bottom-component-left-button {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+    }
+
+    .main-bottom-component-left button {
+        height: 40px;
+        margin-top: 10px;
+        width: 100%;
+        outline: none;
+        font-size: 15px;
+        font-weight: 500;
+        border-radius: 5px;
+        cursor: pointer;
+        border: none;
+        letter-spacing: 0.03rem;
+        background: var(--green-color-one);
+        color: var(--background-color-main);
+        transition: background-color 0.6s ease-in;
+    }
+
+    /*Success popup*/
+    .complain_success {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .popup {
+        width: 400px;
+        background: white;
+        font-family: 'poppins', sans-serif;
+        border-radius: 6px;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        transition: transform 0.4s, top 0.4s;
+    }
+
+    .open-popup {
+        visibility: visible;
+        top: 50%;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .popup img {
+        width: 100px;
+        height: 100px;
+        margin-top: 35px;
+        border-radius: 50%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .popup h2 {
+        font-size: 38px;
+        font-weight: 500;
+        margin: 10px 0 10px;
+    }
+
+    .popup button {
+        width: 100%;
+        margin-top: 30px;
+        padding: 10px 0;
+        background: var(--green-color-one);
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 15px;
+        border-radius: 6px;
+        cursor: pointer;
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+    }
+
+
+    @media screen and (max-width: 1142px) {
+        .main-bottom-right {
+            display: none;
+        }
+
         .main-bottom {
             display: flex;
             align-items: center;
             justify-content: center;
         }
 
-        .main-bottom-component {
-            width: 65%;
-            height: 80%;
-            box-shadow: var(--box-shadow2);
-            border-radius: 10px;
-            padding: 40px;
-            display: grid;
-            grid-template-columns: 50% 50%;
+        .main-bottom-left-component h2 {
+            font-size: 20px;
         }
 
-        .main-bottom-component-right {
+        .main-bottom-left-component button {
+            width: 180px;
+            height: 45px;
+            margin-left: 50px;
+            margin-right: 50px;
+        }
+
+        .main-bottom-left {
+            width: 60%;
+        }
+    }
+
+    @media screen and (max-width: 950px) {
+        .main-bottom-component {
+
             display: flex;
             align-items: center;
             justify-content: center;
         }
 
-        .main-bottom-component-right img {
-            width: 100%;
-            height: 95%;
-            box-shadow: var(--box-shadow2);
-            border-radius: 10px;
+
+        .main-bottom-component-right {
+            display: none;
+
         }
 
         .main-bottom-component-left {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .main-bottom-component-left-topic {
-            margin-bottom: 35px;
-        }
-
-        .line {
-            height: 4px;
-            width: 60px;
-            background-color: var(--green-color-one);
-            margin-top: 3px;
-        }
-
-        .main-bottom-component-left-topic h2 {
-            font-size: 21px;
-            font-weight: 500;
-            letter-spacing: 0.01rem;
-
-        }
-
-        .main-bottom-component-left-component {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .main-bottom-component-left-component {
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 6px;
-        }
-
-        .main-bottom-component-left-component h2 {
-            font-weight: 500;
-            margin-bottom: 5px;
-            font-size: 15px;
-            margin-bottom: 7px;
-        }
-
-        .main-bottom-component-left-component h4 {
-            font-weight: 500;
-            margin-bottom: 5px;
-            font-size: 20px;
-            margin-bottom: 7px;
-        }
-
-        .main-bottom-component-left-component input {
-            height: 29px;
-            width: 80%;
-            outline: none;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            padding-left: 15px;
-            font-size: 14px;
-            margin-bottom: 3px;
-            transition: all 0.3s ease;
-            background-color: var(--background-color-two);
-            color: var(--main-text-color);
-            transition: all 0.6s ease-in;
-        }
-
-        .main-bottom-component-left-component input:focus {
-            border-color: #4dccaa;
-        }
-
-        .complain {
-            height: 66px !important;
-        }
-
-        .err {
-            height: 10px;
-            font-size: 14px;
-            font-weight: 500;
-            margin-bottom: 5px;
-            color: #F13E3E;
-        }
-
-        .main-bottom-component-left-button {
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            margin-top: 5px;
-        }
-
-        .main-bottom-component-left button {
-            height: 33px;
-            margin-top: 10px;
-            width: 83%;
-            outline: none;
-            font-size: 15px;
-            font-weight: 500;
-            border-radius: 5px;
-            cursor: pointer;
-            border: none;
-            letter-spacing: 0.03rem;
-            background: var(--green-color-one);
-            color: var(--background-color-main);
-            transition: background-color 0.6s ease-in;
-        }
-
-
-        /*Success popup*/
-        .complain_success {
-            position: fixed;
-            top: 0;
-            left: 0;
             width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.1);
-            z-index: 2;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
         }
+    }
 
-        .popup {
-            width: 400px;
-            background: white;
-            font-family: 'poppins', sans-serif;
-            border-radius: 6px;
-            text-align: center;
-            padding: 0 30px 30px;
-            color: #333;
-            transition: transform 0.4s, top 0.4s;
-        }
-
-        .open-popup {
-            visibility: visible;
-            top: 50%;
-            transform: translate(-50%, -50%) scale(1);
-        }
-
-        .popup img {
-            width: 100px;
-            height: 100px;
-            margin-top: 35px;
-            border-radius: 50%;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-        }
-
-        .popup h2 {
-            font-size: 38px;
-            font-weight: 500;
-            margin: 10px 0 10px;
-        }
-
-        .popup button {
-            width: 100%;
-            margin-top: 30px;
-            padding: 10px 0;
-            background: var(--green-color-one);
-            color: white;
-            border: 0;
-            outline: none;
-            font-size: 15px;
-            border-radius: 6px;
-            cursor: pointer;
-            box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-        }
-
-
-        @media screen and (max-width: 1142px) {
-            .main-bottom-right {
-                display: none;
-            }
-
-            .main-bottom {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-
-            .main-bottom-left-component h2 {
-                font-size: 20px;
-            }
-
-            .main-bottom-left-component button {
-                width: 180px;
-                height: 45px;
-                margin-left: 50px;
-                margin-right: 50px;
-            }
-
-            .main-bottom-left {
-                width: 60%;
-            }
-        }
-
-        @media screen and (max-width: 950px) {
-            .main-bottom-component {
-
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-
-
-            .main-bottom-component-right {
-                display: none;
-
-            }
-
-            .main-bottom-component-left {
-                width: 100%;
-            }
-        }
-    
 }
