--- a/public/css/Component/Collector/Collector_Main.css
+++ b/public/css/Component/Collector/Collector_Main.css
@@ -1,231 +1,346 @@
 .Collector_Main {
 
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Mukta:wght@500&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital,wght@0,400;0,500;1,400&family=Rubik:wght@500&family=Shrikhand&display=swap');
-    
-    
-        * {
-            padding: 0;
-            margin: 0;
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Mukta:wght@500&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital,wght@0,400;0,500;1,400&family=Rubik:wght@500&family=Shrikhand&display=swap');
+
+
+    * {
+        padding: 0;
+        margin: 0;
+    }
+
+    .main {
+        width: 100%;
+        height: 100vh;
+        display: grid;
+        grid-template-columns: 17% 83%;
+        font-family: 'Inter', sans-serif;
+        color: var(--main-text-color);
+        background-color: var(--background-color-main);
+    }
+
+    .main-left {
+        display: flex;
+        flex-direction: column;
+        background-color: var(--background-color-main);
+        color: var(--main-text-color);
+        box-shadow: var(--box-shadow2) !important;
+        z-index: 2;
+
+    }
+
+    .main-left-top {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 25px;
+        height: 70px;
+    }
+
+    .main-left-top img {
+        width: 70px;
+        height: 70px;
+        margin-right: 5px;
+    }
+
+    .main-left-top h3 {
+        font-size: 19px;
+        background: linear-gradient(to right, var(--green-color-one), var(--green-color-two));
+        -webkit-background-clip: text;
+        color: transparent;
+        font-weight: bold;
+        letter-spacing: 0.001rem;
+        margin-top: 5px;
+    }
+
+    .main-left-middle {
+        display: flex;
+        flex-direction: column;
+        padding-left: 16%;
+        padding-top: 15%;
+    }
+
+
+
+    .main-left-middle h1 {
+        font-size: 18px;
+        margin-bottom: 13%;
+    }
+
+    .main-left-middle-content {
+        display: flex;
+        width: 100%;
+        font-size: 16px;
+        align-items: center;
+        margin-bottom: 8%;
+        cursor: pointer;
+    }
+
+    .main-left-middle-content-icon {
+        margin-right: 7%;
+    }
+
+    .main-left-middle-content h3 {
+        font-size: 18px;
+        letter-spacing: 0.03rem;
+    }
+
+    .main-left-middle {
+        .main-left-middle-content:hover {
+            color: #1ca557;
         }
-    
-        .main {
-            width: 100%;
-            height: 100vh;
-            display: grid;
-            grid-template-columns: 17% 83%;
-            font-family: 'Inter', sans-serif;
-            color: var(--main-text-color);
-            background-color: var(--background-color-main);
+
+        .main-left-middle-content:hover .main-left-middle-content-icon i {
+            color: #1ca557;
         }
-    
-        .main-left {
-            display: flex;
-            flex-direction: column;
-            background-color: var(--background-color-main);
-            color: var(--main-text-color);
-            box-shadow: var(--box-shadow2) !important;
-            z-index: 2;
-    
-        }
-    
-        .main-left-top {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 25px;
-            height: 70px;
-        }
-    
-        .main-left-top img {
-            width: 70px;
-            height: 70px;
-            margin-right: 5px;
-        }
-    
-        .main-left-top h3 {
-            font-size: 19px;
-            background: linear-gradient(to right, var(--green-color-one), var(--green-color-two));
-            -webkit-background-clip: text;
-            color: transparent;
-            font-weight: bold;
-            letter-spacing: 0.001rem;
-            margin-top: 5px;
-        }
-    
-        .main-left-middle {
-            display: flex;
-            flex-direction: column;
-            padding-left: 16%;
-            padding-top: 15%;
-        }
-    
-    
-    
-        .main-left-middle h1 {
-            font-size: 18px;
-            margin-bottom: 13%;
-        }
-    
-        .main-left-middle-content {
-            display: flex;
-            width: 100%;
-            font-size: 16px;
-            align-items: center;
-            margin-bottom: 8%;
-            cursor: pointer;
-        }
-    
-        .main-left-middle-content-icon {
-            margin-right: 7%;
-        }
-    
-        .main-left-middle-content h3 {
-            font-size: 18px;
-            letter-spacing: 0.03rem;
-        }
-    
-        .main-left-middle {
-            .main-left-middle-content:hover {
-                color: #1ca557;
-            }
-    
-            .main-left-middle-content:hover .main-left-middle-content-icon i {
-                color: #1ca557;
-            }
-    
-            .main-left-middle-content:hover h3 {
-                color: #1ca557;
-            }
-        }
-    
-        .main-left-middle-content i {
-            font-size: 29px;
-        }
-    
-        .main-left-down {
-            display: flex;
-            flex-direction: column;
-            padding-left: 16%;
-        }
-    
-        .main-left-down {
-            display: flex;
-            flex-direction: column;
-            padding-left: 16%;
-            margin-top: 50%;
-        }
-    
-        .main-left-down h1 {
-            font-size: 18px;
-            margin-bottom: 13%;
-        }
-    
-        .toggle-container {
-            display: inline-block;
-            margin-top: 5px;
-            margin-left: 10px;
-        }
-    
-        .toggle-container input[type="checkbox"] {
-            display: none;
-        }
-    
-        /* Style for the toggle button */
-        .toggle-button {
-            display: inline-block;
-            cursor: pointer;
-            width: 38px;
-            height: 23px;
-            background-color: #dcdde1;
-            border-radius: 15px;
-            position: relative;
-            transition: background-color 0.3s ease;
-        }
-    
-        /* Style for the toggle indicator */
-        .toggle-indicator {
-            position: absolute;
-            top: 3px;
-            left: 4px;
-            width: 17px;
-            height: 17px;
-            background-color: #fff;
-            border-radius: 50%;
-            transition: transform 0.3s ease;
-        }
-    
-        /* Change button color and move indicator on toggle */
-        .toggle-container input[type="checkbox"]:checked+.toggle-button {
-            background-color: black;
-        }
-    
-        .toggle-container input[type="checkbox"]:checked+.toggle-button .toggle-indicator {
-            transform: translateX(13px);
-        }
-    
-        @media screen and (max-width: 1266px) {
-            .main-left-top h3 {
-                display: none;
-            }
-    
-            .main-left-top img {
-                margin-right: 0;
-                width: 75px;
-                height: 75px;
-            }
-        }
-    
-        @media screen and (max-width: 1266px) {
-            .main-left-middle-content h3 {
-                font-size: 16px;
-            }
-    
-    
-        }
-    
-        @media screen and (max-width: 1266px) {
-            .main-left-middle-content h3 {
-                font-size: 14px;
-            }
-        }
-    
-        @media screen and (max-width: 784px) {
-            .main-left-middle-content h3 {
-                display: none;
-            }
-    
-            .main-left-middle-content {
-                justify-content: center;
-            }
-    
-            .main-left-middle {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                padding-top: 15%;
-                margin-top: 35%;
-    
-            }
-    
-            .main-left-middle h1 {
-                font-size: 15px;
-                margin-bottom: 13%;
-            }
-    
-            .main-left-down h1 {
-                justify-content: center;
-            }
-    
-            .main-left-down h1 {
-                font-size: 15px;
-                margin-bottom: 13%;
-            }
-    
-            .main-left-down {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                margin-top: 100%;
-            }
+
+        .main-left-middle-content:hover h3 {
+            color: #1ca557;
         }
     }
+
+    .main-left-middle-content i {
+        font-size: 29px;
+    }
+
+    .main-left-down {
+        display: flex;
+        flex-direction: column;
+        padding-left: 16%;
+    }
+
+    .main-left-down {
+        display: flex;
+        flex-direction: column;
+        padding-left: 16%;
+        margin-top: 50%;
+    }
+
+    .main-left-down h1 {
+        font-size: 18px;
+        margin-bottom: 13%;
+    }
+
+    .toggle-container {
+        display: inline-block;
+        margin-top: 5px;
+        margin-left: 10px;
+    }
+
+    .toggle-container input[type="checkbox"] {
+        display: none;
+    }
+
+    /* Style for the toggle button */
+    .toggle-button {
+        display: inline-block;
+        cursor: pointer;
+        width: 38px;
+        height: 23px;
+        background-color: #dcdde1;
+        border-radius: 15px;
+        position: relative;
+        transition: background-color 0.3s ease;
+    }
+
+    /* Style for the toggle indicator */
+    .toggle-indicator {
+        position: absolute;
+        top: 3px;
+        left: 4px;
+        width: 17px;
+        height: 17px;
+        background-color: #fff;
+        border-radius: 50%;
+        transition: transform 0.3s ease;
+    }
+
+    /* Change button color and move indicator on toggle */
+    .toggle-container input[type="checkbox"]:checked+.toggle-button {
+        background-color: black;
+    }
+
+    .toggle-container input[type="checkbox"]:checked+.toggle-button .toggle-indicator {
+        transform: translateX(13px);
+    }
+
+    .dot {
+        width: 18.5px;
+        height: 18.5px;
+        border-radius: 50%;
+        background-color: #F13E3E;
+        margin-top: -11px;
+        margin-left: -15px;
+        color: var(--background-color-main);
+        font-size: 11px;
+        font-weight: 501;
+        box-sizing: border-box;
+        padding-left: 6px;
+        padding-top: 3px;
+    }
+
+    .main-right-top-notification i {
+        font-size: 29px;
+        cursor: pointer;
+    }
+
+    .notification_popup {
+        height: 0;
+        position: absolute;
+        top: 9%;
+        right: 11%;
+        background-color: var(--background-color-main);
+        border-radius: 10px;
+        padding: 0;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        transition: height 0.6s ease-in;
+        width: 18%;
+        visibility: hidden;
+        opacity: 0;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        overflow: scroll;
+        border: 1px solid #dcdde1;
+    }
+
+    .notification_popup h1 {
+        font-size: 19px;
+        letter-spacing: 0.001rem;
+        margin-top: 5px;
+        margin-left: 8px;
+    }
+
+    .notification_popup.active {
+        height: 200px;
+        padding: 10px;
+        visibility: visible;
+        opacity: 1;
+    }
+
+    .notification {
+        height: 38px !important;
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+        padding-left: 10px;
+        font-size: 14px;
+        cursor: pointer;
+    }
+
+    .mark_as_read {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        margin-top: 4px;
+    }
+
+    .notification_cont {
+        overflow: scroll;
+        max-height: 150px;
+    }
+
+    .mark_as_read button {
+        margin-top: 2px;
+        font-size: 13px;
+        text-align: center;
+        margin-top: 4px;
+        font-weight: 700;
+        border: none;
+        background-color: none !important;
+        background: none;
+        cursor: pointer !important;
+        color: var(--main-text-color);
+        margin-left: 5px;
+    }
+
+    .mark_as_read button:hover {
+        color: var(--button-hover-green);
+    }
+
+    .mark_as_read .bx {
+        font-size: 26px;
+    }
+
+    .notification:hover {
+        background-color: var(--notification-hover);
+    }
+
+    .notification-green-dot {
+        width: 11px;
+        height: 11px;
+        border-radius: 50%;
+        background-color: var(--green-color-one);
+        margin-right: 10px;
+    }
+
+    .notification_right p {
+        font-size: 13px;
+    }
+
+    @media screen and (max-width: 1266px) {
+        .main-left-top h3 {
+            display: none;
+        }
+
+        .main-left-top img {
+            margin-right: 0;
+            width: 75px;
+            height: 75px;
+        }
+    }
+
+    @media screen and (max-width: 1266px) {
+        .main-left-middle-content h3 {
+            font-size: 16px;
+        }
+
+
+    }
+
+    @media screen and (max-width: 1266px) {
+        .main-left-middle-content h3 {
+            font-size: 14px;
+        }
+    }
+
+    @media screen and (max-width: 784px) {
+        .main-left-middle-content h3 {
+            display: none;
+        }
+
+        .main-left-middle-content {
+            justify-content: center;
+        }
+
+        .main-left-middle {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding-top: 15%;
+            margin-top: 35%;
+
+        }
+
+        .main-left-middle h1 {
+            font-size: 15px;
+            margin-bottom: 13%;
+        }
+
+        .main-left-down h1 {
+            justify-content: center;
+        }
+
+        .main-left-down h1 {
+            font-size: 15px;
+            margin-bottom: 13%;
+        }
+
+        .main-left-down {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 100%;
+        }
+    }
+}
