--- a/public/css/Component/Collector/Collector_Request_Cancelled.css
+++ b/public/css/Component/Collector/Collector_Request_Cancelled.css
@@ -73,7 +73,7 @@
 
     .table-row {
         height: 55px;
-        grid-template-columns: 11% 10% 9% 11% 14% 12% 12% 21%;
+        grid-template-columns: 13% 14% 14% 11% 14% 14% 20%;
     }
 
     .table td {
@@ -81,7 +81,7 @@
     }
 
     .table-header {
-        grid-template-columns: 11% 10% 9% 11% 14% 12% 12% 21%;
+        grid-template-columns: 13% 14% 14% 11% 14% 14% 20%;
     }
 
     td img {
@@ -92,188 +92,11 @@
 
 
 
-    /*Location popup*/
-    .location_pop {
-        display: flex;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%) scale(0);
-        background-color: rgba(0, 0, 0, 0);
-        z-index: 4;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        overflow: hidden;
-        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
-    }
-
-    .location_pop.active {
-        transform: translate(-50%, -50%) scale(1);
-    }
-
-    .location_pop_content {
-        width: 700px;
-        padding: 10px;
-        background-color: #f1f2f6;
-        border-radius: 10px;
-        padding: 20px;
-        padding-bottom: 40px;
-        height: 350px;
-        overflow: hidden;
-    }
-
-    .location_pop_map {
-        width: 100;
-        height: 100%;
-        border-radius: 10px;
-    }
-
-    .location_close {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 6px;
-    }
-
-    .location_close button {
-        background-color: #ff4757;
-        color: #fff;
-        cursor: pointer;
-        border: none;
-        font-size: 16px;
-        border-radius: 5px;
-        width: 85px;
-        height: 28px;
-    }
 
 
 
-    /*request details*/
-    .request-details-pop {
-
-        display: flex;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%) scale(0);
-        z-index: 3;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        overflow: hidden;
-        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
-        box-shadow: var(--box-shadow);
-        border-radius: 10px;
-        background-color: #333;
-
-    }
-
-    .request-details-pop.active {
-        transform: translate(-50%, -50%) scale(1);
-        background-color: rgba(0, 0, 0, 0);
-    }
-
-    .request-details-pop-form {
-        width: 500px;
-        background: white;
-        border-radius: 6px;
-        top: 0;
-        position: relative;
-        text-align: center;
-        padding: 20px;
-        color: #333;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: transform 0.4s, top 0.4s;
-        flex-direction: column;
-
-    }
-
-    .request-details-pop-form-top {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 25px;
-        font-size: 18px;
-    }
-
-    .request-details-pop-form-close {
-        width: 25px;
-        height: 25px;
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        width: 20px;
-        height: 20px;
-        cursor: pointer;
-    }
-
-    .request-details-topic {
-        display: flex;
-    }
-
-    .request-details-pop-form-content {
-        display: grid;
-        grid-template-columns: 30% 70%;
-        width: 95%;
-        background-color: white;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        border-radius: 6px;
-        margin-bottom: 10px;
-
-    }
-
-    .request-details-topic::before {
-        content: '';
-        position: absolute;
-        margin-top: 23px;
-        margin-left: 45px;
-        margin-bottom: 15px;
-        height: 4px;
-        width: 67px;
-        background: var(--green-color-one);
-
-    }
-
-    .request-details-right-labels {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        padding-top: 40px;
-        padding-left: 40px;
-        padding-bottom: 50px;
-
-    }
-
-    .request-details-right-labels span {
-        margin-bottom: 15px;
-        font-size: 15px;
-        color: #7c7c7d;
-    }
-
-    .request-details-right-values {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        padding-top: 40px;
-        padding-left: 90px;
-        padding-bottom: 50px;
-
-    }
-
-    .request-details-right-values span {
-        margin-bottom: 15px;
-        font-size: 15px;
-        color: #767e95;
-        font-weight: 550;
-    }
 
 
-    /* ------------*/
 
 
 }
