--- a/public/css/Component/Collector/Collector_Reuqest_Assigned.css
+++ b/public/css/Component/Collector/Collector_Reuqest_Assigned.css
@@ -16,21 +16,11 @@
 
   .table-row {
     height: 55px;
-    grid-template-columns: 11% 10% 9% 13% 10% 12% 17% 9% 9%;
-  }
-
-  .table td {
-    height: 55px;
+    grid-template-columns: 13% 14% 14% 20% 13% 13% 13%;
   }
 
   .table-header {
-    grid-template-columns: 11% 10% 9% 13% 10% 12% 17% 9% 9%;
-  }
-
-  td img {
-    margin: 7px;
-    height: 25px;
-    width: 25px;
+    grid-template-columns: 13% 14% 14% 20% 13% 13% 13%;
   }
 
   .main-right-bottom-three {
@@ -57,6 +47,61 @@
     margin-top: 20px;
   }
 
+  /*Location popup*/
+  .location_pop {
+    display: flex;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    background-color: rgba(0, 0, 0, 0);
+    z-index: 4;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    overflow: hidden;
+    transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+  }
+
+  .location_pop.active {
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  .location_pop_content {
+    width: 700px;
+    padding: 10px;
+    background-color: #f1f2f6;
+    border-radius: 10px;
+    padding: 20px;
+    padding-bottom: 40px;
+    height: 350px;
+    overflow: hidden;
+  }
+
+  .location_pop_map {
+    width: 100;
+    height: 100%;
+    border-radius: 10px;
+  }
+
+  .location_close {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 6px;
+  }
+
+  .location_close button {
+    background-color: #ff4757;
+    color: #fff;
+    cursor: pointer;
+    border: none;
+    font-size: 16px;
+    border-radius: 5px;
+    width: 85px;
+    height: 28px;
+  }
+
   .Location {
     display: flex;
     position: fixed;
@@ -69,6 +114,8 @@
     align-items: center;
     justify-content: center;
   }
+
+  /* ------ */
 
   .cancel-open .fa-solid {
     font-size: 21px !important;
@@ -95,7 +142,6 @@
   }
 
 
-
   .overlay {
     position: fixed;
     top: 0;
@@ -106,6 +152,8 @@
     z-index: 2;
     display: none;
   }
+
+  /*On the way popup*/
 
   .on_the_way {
     display: flex;
@@ -186,9 +234,10 @@
     color: white;
     letter-spacing: 0.02rem;
     background-color: #bab3b3;
-
   }
 
+  /* --------- */
+  /* Cancel popup*/
 
   .cancel-confirm {
     display: flex;
@@ -254,7 +303,6 @@
   }
 
   .cancel-confirm-content h1 {
-
     font-size: 15px;
     font-weight: 500;
   }
@@ -264,6 +312,35 @@
     align-items: center;
     justify-content: center;
     flex-direction: row;
+  }
+
+  .cancel_fine_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 12px;
+  }
+
+  .cancel-confirm h2 {
+    font-size: 15px;
+    font-weight: 100;
+    margin-bottom: 12px;
+    margin-top: 10px;
+  }
+
+  .cancel_fine_container label {
+    font-size: 14px;
+    letter-spacing: 0.01rem;
+  }
+
+  .cancel_fine_container input[type="radio"] {
+    width: 14px;
+    height: 14px;
+  }
+
+  input[type="radio"]:checked+label {
+    color: green !important;
+    font-weight: bold;
   }
 
   .cancel-confirm-button-container {
@@ -345,7 +422,7 @@
     }
 
     .form-title {
-      font-size: 25px;
+      font-size: 20px;
       font-weight: 500;
       position: relative;
       margin-bottom: 20px;
@@ -354,10 +431,10 @@
     .form-title::before {
       content: '';
       position: absolute;
-      height: 4px;
-      width: 60px;
-      background: #1B6652;
-      margin-top: 33px;
+      height: 3px;
+      width: 57px;
+      background: var(--green-color-one);
+      margin-top: 25px;
       margin-bottom: 5px;
     }
 
@@ -378,7 +455,7 @@
 
     .main-right-bottom-content-content {
       width: 300px;
-      margin-bottom: 20px;
+      /* margin-bottom: 20px; */
       position: relative;
     }
 
@@ -387,30 +464,13 @@
       font-weight: 500;
       margin-bottom: 5px;
       text-align: left;
+      font-size: 15px;
 
     }
 
     .input-container {
       position: relative;
       margin-bottom: 20px;
-    }
-
-    .wide-note {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      margin-bottom: 20px;
-    }
-
-    .wide-note .main-right-bottom-content-content {
-      width: calc(100% - 4px);
-    }
-
-    .note-input {
-      width: calc(100% - 44px);
-      height: 200px;
-      padding-left: 20px;
-      padding-right: 2px;
     }
 
     .icon {
@@ -433,13 +493,13 @@
     }
 
     .main-right-bottom-content-content input {
-      height: 45px;
-      width: 90%;
+      height: 35px;
+      width: 85%;
       outline: none;
       border-radius: 5px;
       border: 1px solid #ccc;
       padding-left: 35px;
-      font-size: 16px;
+      font-size: 14px;
       transition: all 0.3s ease;
     }
 
@@ -448,7 +508,22 @@
     }
 
     .wide-note input {
-      width: 96%;
+      width: 649px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-bottom: 10px;
+    }
+
+    .wide-note .main-right-bottom-content-content {
+      width: 100%;
+    }
+
+    .note-input {
+      width: 100%;
+      height: 200px;
+      padding-left: 20px;
+      padding-right: 2px;
     }
 
     .form-button {
@@ -464,117 +539,43 @@
     }
 
     .form-button button[type="submit"] {
-      height: 50px;
+      height: 40px;
       outline: none;
-      width: 260px;
+      width: 350px;
       color: white;
-      font-size: 18px;
+      font-size: 17px;
       font-weight: 500;
       border-radius: 5px;
       cursor: pointer;
       border: none;
       letter-spacing: 1px;
-      background: #1B6652;
+      background: var(--green-color-one);
       padding: 0 20px;
     }
 
     .form-button button[type="submit"]:hover {
-      background: rgb(28, 79, 64);
+      background: #19954e;
     }
 
     .cancel-button {
-      width: 230px;
-      height: 50px;
+      width: 290px;
+      height: 40px;
       outline: none;
-      color: #333;
-      font-size: 18px;
+      color: white;
+      font-size: 17px;
       font-weight: 500;
       border-radius: 5px;
       cursor: pointer;
       border: none;
       letter-spacing: 1px;
-      background: #ccc;
+      background: #bab3b3;
       padding: 0 15px;
       margin-left: 45px;
-
     }
 
     .cancel-button:hover {
-      background: #ddd;
+      background: #a7a1a1;
     }
-
-  }
-
-  /*request details*/
-  .request-details-pop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.1);
-    z-index: 2;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-  }
-
-  .request-details-pop-form {
-    width: 45%;
-    background: white;
-    border-radius: 6px;
-    top: 0;
-    position: relative;
-    text-align: center;
-    padding: 30px;
-    color: #333;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: transform 0.4s, top 0.4s;
-    flex-direction: column;
-
-  }
-
-  .request-details-pop-form-top {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 25px;
-    font-size: 18px;
-  }
-
-  .request-details-pop-form-close {
-    width: 25px;
-    height: 25px;
-    margin-left: 100%;
-    margin-top: -3%;
-    cursor: pointer;
-  }
-
-  .request-details-topic {
-    display: flex;
-  }
-
-  .request-details-pop-form-content {
-    display: grid;
-    grid-template-columns: 30% 70%;
-    width: 80%;
-    background-color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    border-radius: 6px;
-
-  }
-
-  .request-details-topic::before {
-    content: '';
-    position: absolute;
-    margin-top: 23px;
-    margin-left: 45px;
-    margin-bottom: 15px;
-    height: 4px;
-    width: 67px;
-    background: #1B6652;
 
   }
 
