--- a/public/css/Component/Collector/Collector_assistants-main.css
+++ b/public/css/Component/Collector/Collector_assistants-main.css
@@ -1,10 +1,10 @@
 .Collector_assistants-main {
 
-    #Collector_Assistants i {
+    #dashboard i {
         color: var(--green-color-one);
     }
 
-    #Collector_Assistants h3 {
+    #dashboard h3 {
         color: var(--green-color-one);
     }
 
@@ -14,9 +14,7 @@
         height: 100%;
         grid-template-rows: 23% 77%;
         background-color: var(--background-color-right);
-
     }
-
 
     .main-right-top {
         display: flex;
@@ -78,76 +76,6 @@
         margin-right: 2.5%;
     }
 
-    .dot {
-        width: 11px;
-        height: 11px;
-        border-radius: 50%;
-        background-color: #F13E3E;
-        margin-top: -14px;
-        margin-left: -12px;
-    }
-
-    .main-right-top-notification i {
-        font-size: 29px;
-        cursor: pointer;
-    }
-
-    .notification_popup {
-        height: 0;
-        position: absolute;
-        top: 9%;
-        right: 11%;
-        background-color: var(--background-color-main);
-        border-radius: 10px;
-        padding: 0;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        transition: height 0.6s ease-in;
-        width: 18%;
-        visibility: hidden;
-        opacity: 0;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        overflow: scroll;
-        border: 1px solid #dcdde1;
-    }
-
-    .notification_popup h1 {
-        font-size: 19px;
-        letter-spacing: 0.001rem;
-        margin-bottom: 13px;
-        margin-top: 5px;
-        margin-left: 8px;
-    }
-
-    .notification_popup.active {
-        height: 200px;
-        padding: 10px;
-        visibility: visible;
-        opacity: 1;
-    }
-
-    .notification {
-        height: 43px !important;
-        margin-top: 10px;
-        display: flex;
-        align-items: center;
-        padding-left: 10px;
-        font-size: 14px;
-        cursor: pointer;
-    }
-
-    .notification:hover {
-        background-color: var(--notification-hover);
-    }
-
-    .notification-green-dot {
-        width: 11px;
-        height: 11px;
-        border-radius: 50%;
-        background-color: var(--green-color-one);
-        margin-right: 10px;
-    }
 
     .main-right-top-profile {
         display: flex;
@@ -274,7 +202,7 @@
         background: rgb(28, 79, 64);
     }
 
-    
+
     .delete_confirm {
         position: fixed;
         top: 0;
@@ -357,7 +285,7 @@
         border-radius: 4px;
         cursor: pointer;
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-    } 
+    }
 
     .main-right-bottom-down {
         padding-left: 3.5%;
@@ -383,6 +311,10 @@
         height: 52px;
         display: grid;
         grid-template-columns: 15% 15% 20% 15% 15% 10% 10%;
+    }
+
+    .table .bx {
+        color: var(--main-text-color) !important;
     }
 
     .table td {
@@ -559,12 +491,6 @@
         margin-bottom: 17px;
     }
 
-    /* .line {
-        width: 93px;
-        height: 3px;
-        background-color: #1B6652;
-    } */
-
     .updateData input {
         width: 80%;
         padding: 6px 12px;
@@ -587,7 +513,6 @@
         border-radius: 4px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
-
 
     /*Update success*/
     .collector_ass_update_success {
