garbage type ui

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -140,6 +140,8 @@
 @import url('Component/Admin/Admin_Center_Main_Request_Cancelled.css');
 @import url('Component/Admin/Admin_Center_Main_Request_Completed.css');
 
+@import url('Component/Admin/Admin_Garbage_Types_View.css');
+
 
 
 @import url('Component/Animation/main.css');
