--- a/public/css/style.css
+++ b/public/css/style.css
@@ -98,6 +98,7 @@
 
 @import url('Component/Agent/Discount_Agent.css');
 @import url('Component/Agent/Discount_Agent_ValidateUser.css');
+@import url('Component/Agent/Discount_Agent_Discount.css');
 
 
 /* Admin CSS */
