--- a/public/css/Component/Agent/Discount_Agent_ValidateUser.css
+++ b/public/css/Component/Agent/Discount_Agent_ValidateUser.css
@@ -98,6 +98,17 @@ input {
     margin-top: 20px;
 }
 
+.err {
+    height: 10px;
+    font-size: 14px;
+    font-weight: 500;
+    width: 100%;
+    color: #e74c3c;
+    margin-top: -16px; 
+    margin-bottom: 10px; 
+}
+
+
 button {
     background-color: #1f8134;
     color: #fff;
@@ -106,7 +117,7 @@ button {
     border-radius: 4px;
     cursor: pointer;
     width: 100%;
-    margin-top: 2px;
+    margin-bottom: 30px;
 }
 
 button:hover {
