--- a/public/css/style.css
+++ b/public/css/style.css
@@ -228,6 +228,7 @@ a {
     align-items: center;
     justify-content: center;
     transition: background-color 0.3s ease;
+    overflow: auto;
 }
 
 .table-row:hover {
