--- a/public/css/Component/Admin/Admin_Dashboard.css
+++ b/public/css/Component/Admin/Admin_Dashboard.css
@@ -474,8 +474,8 @@
         border-radius: 10px;
     }
 
-    .main-right-bottom-three-right-left .bx-coin {
-        font-size: 90px;
+    .main-right-bottom-three-right-left .fa-solid {
+        margin: 20px;
     }
 
     .main-right-bottom-three-right-left h1 {
